--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
 <ul>
     {% for sim in xcode['simulators'] %}
     <li>
-        {{sim['name']}}
+        {{ sim }}
     </li>
     {% endfor %}
 </ul>
