--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,8 @@
 ---
+title: Circle CI OSX Container Software
 ---
-<h1>OSX Containers</h1>
+<h1>{{ page.title }}</h1>
+<p>This document describes the software present on <a href="https://circleci.com">CircleCI</a> OSX containers.
 
 {% for xcode in site.data.xcode %}
 <h2>Xcode {{ xcode['version'] }} (build {{ xcode['build_version'] }})</h2>
