Add homebrew tests

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,7 @@ title: CircleCI OSX Container Software
         </tr>
         <tr>
             <td>carthage</td>
-            <td>{{ site.data.gems.carthage }}</td>
+            <td>{{ site.data.homebrew.carthage }}</td>
         </tr>
         <tr>
             <td>shenzhen</td>
