--- a/pages/index.html
+++ b/pages/index.html
@@ -1,8 +1,8 @@
 ---
-title: CircleCI OSX Container Software
+title: CircleCI macOS Container Software
 ---
 <h1>{{ page.title }}</h1>
-<p>This document describes the software present on <a href="https://circleci.com">CircleCI</a> OSX containers.</p>
+<p>This document describes the software present on <a href="https://circleci.com">CircleCI</a> macOS containers.</p>
 
 <table>
     <thead>
