Add tests for git and git-lfs

--- a/pages/index.html
+++ b/pages/index.html
@@ -40,6 +40,10 @@ title: CircleCI macOS Container Software
     </thead>
     <tbody>
         <tr>
+            <td>git</td>
+            <td>{{ site.data.homebrew['git'] }} (with {{ site.data.homebrew['git-lfs'] }})</td>
+        </tr>
+        <tr>
             <td>Ruby</td>
             <td>{{ site.data.software.ruby.version }}</td>
         </tr>
