Update for xcode 9.3.1

--- a/pages/index.html
+++ b/pages/index.html
@@ -56,6 +56,10 @@ title: CircleCI macOS Container Software
             <td>{{ site.data.software.tools.python }} ({{ site.data.software.tools.pip | truncatewords: 2, "" }})</td>
         </tr>
         <tr>
+            <td>Python 3</td>
+            <td>{{ site.data.software.tools.python3 }} ({{ site.data.software.tools.pip3 | truncatewords: 2, "" }})</td>
+        </tr>
+        <tr>
             <td>Node.js</td>
             <td>{{ site.data.homebrew['node'] }} (yarn {{ site.data.homebrew['yarn'] }})</td>
         </tr>
